--- a/app/assets/stylesheets/layouts/_banner.scss
+++ b/app/assets/stylesheets/layouts/_banner.scss
@@ -100,7 +100,7 @@
 }
 
 .search-query {
-   color: $my-green;
+   color: $my-gray;
    font-size: 12px;
    padding-left: 5px;
    border: 1px gray solid;
