--- a/app/assets/stylesheets/coworkings/_new_coworking.scss
+++ b/app/assets/stylesheets/coworkings/_new_coworking.scss
@@ -31,6 +31,9 @@
   label {
     font-size: 15px;
   }
+  em  {
+    font-size: 10px;
+  }
 }
 
 .checkbox-new-coworking {
@@ -41,6 +44,8 @@
     text-align: space-between;
   }
 }
+
+// Attachinary design
 
 .attachinary {
   input {
@@ -63,43 +68,22 @@
   }
 }
 
+// Categories design
 
-
-// wagon design
-// .form-post {
-//   background: white;
-//   margin-top: 50px;
-//   padding: 20px;
-//   border-radius: 5px;
-//   h1 {
-//     text-align: center;
-//     font-weight: bold;
-//     font-size: 25px;
-//     color: #666666;
-//     margin-bottom: 50px;
-//     margin-top: 0px;
-//   }
-//   .btn {
-//     width: 100%;
-//     padding: 10px;
-//     font-weight: bold;
-//   }
-// }
-
-// // Checkboxes design
-// .form-group {
-  .equipment-choices {
+.form-group {
+  .checkbox-choices {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     margin: 20px 0;
     label {
       color: $my-white;
-      font-size: 10px;
+      font-size: 12px;
     }
   }
-// }
-.equipment-choice {
+}
+
+.checkbox-choice {
   background: $my-gray;
   padding: 20px;
   border-radius: 5px;
